welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:3: error: not found: value estFaceEau
	while(!estFaceEau) {
               ^