welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (i <- 1 to 28) {
	while(!estFaceEau) {
		avance()
	}
	recule()
	gauche()
}
